# mstool

./: .gitignore  MANIFEST.in  README.md  install.sh  notes_to_myself.txt  pyproject.toml  requirements.txt  setup.py
FF/charmm36/: pip.xml
FF/martini2.2/: POPC.itp  POPCh.itp  POPChm.itp  PROA_P.itp  martini_v2.0_ions.itp  martinize.py  nonbond_params.py  nonbond_params_LJ  system.top  toy.itp  tp.itp
FF/martini3.0.0/: martini_v3.0.0_phospholipids_v1.itp  ompf2_proa.itp  system.top
data/: DLPC1_283K.csv  DLPC1_303K.csv  DLPC1_323K.csv  DLPC2_283K.csv  DLPC2_303K.csv  DLPC2_323K.csv  DPPC1_323K.csv  DPPC2_323K.csv  Ferreria_POPC1.csv  Ferreria_POPC2.csv  POPE1.csv  POPE2.csv  README
docs/: README.md  requirements.txt
docs/source/: POPC.afdesign  backmap.rst  conf.py  index.rst  input.rst  installation.rst  isomer.afdesign  membranebuilder.rst  mscgbackmapping.rst
examples/6TLC/: 6tlc.fasta  run.py
examples/ALA_ring/: circularhelix.py
examples/GLP1/: step2.lipid.dms
examples/POPC.CHL1/: run.py
examples/POPC.CHL1.big/: run.py
examples/POPC.CHL1.trans/: run.py
examples/SphereMembrane/: run.py  sphere.NPT.csv  topol.top
examples/solvation/: run.py
examples/sphere20nm/: run.py  trio.xml
examples/sphere30nm_seipin/: README  run.py
lib-python/mstool/: __init__.py  authors.py
msprot/: __init__.py  fill.py  fill_loops.py  loopmodeler.py  mutate.py
msprot/utils/: dms2openmm.py  gmx_energy.py  martinizedms.py  protein_sel.py  readmappings.py  readmartini.py  seq.py  (+2 more)
mstool/: __init__.py  fill_side.py  solvate_martini.py
tests/: test_na.py
(+400 files in other folders)
