[build-system]
requires      = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name        = "mstool"
authors     = [{ name = "Siyoung Kim", email = "siyoung.k@icloud.com" }]
description = "Multiscale Simulation Tool for Backmapping and Membrane Builder"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">= 3.10"
dynamic     = ['version']
dependencies = [
    "pandas",
    "matplotlib",
    "scipy",
    "networkx",
    "rdkit",
    "openmm"
]

[project.urls]
Repository    = "https://github.com/ksy141/mstool.git"
documentation = "https://mstool.readthedocs.io/en/latest/#"

